<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_batch_edit"
		android:icon="@drawable/ic_batch_edit_toolbar"
		android:orderInCategory="1"
		android:title="@string/toolbar_batch_edit_lyrics_title"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_edit"
		android:icon="@drawable/ic_edit_toolbar"
		android:orderInCategory="2"
		android:title="@string/toolbar_edit_lyric_title"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_delete"
		android:icon="@drawable/ic_delete_toolbar"
		android:orderInCategory="3"
		android:title="@string/toolbar_delete_lyrics_title"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_select_all"
		android:icon="@drawable/ic_select_all_toolbar"
		android:orderInCategory="4"
		android:title="@string/toolbar_select_all_title"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_manually_set"
		android:orderInCategory="5"
		android:title="@string/toolbar_manually_set_timestamp_title"
		app:showAsAction="never" />

	<item
		android:id="@+id/action_copy"
		android:icon="@drawable/ic_copy_toolbar"
		android:orderInCategory="6"
		android:title="@string/toolbar_copy_lyrics_title"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_paste"
		android:orderInCategory="7"
		android:title="@string/toolbar_paste_title"
		app:showAsAction="never">

		<menu>

			<item
				android:id="@+id/action_paste_before"
				android:orderInCategory="8"
				android:title="@string/toolbar_paste_lyrics_before_selected_title"
				app:showAsAction="never" />

			<item
				android:id="@+id/action_paste_after"
				android:orderInCategory="9"
				android:title="@string/toolbar_paste_lyrics_after_selected_title"
				app:showAsAction="never" />

		</menu>

	</item>

	<item
		android:id="@+id/action_insert"
		android:orderInCategory="10"
		android:title="@string/toolbar_insert_lyrics_title"
		app:showAsAction="never">

		<menu>

			<item
				android:id="@+id/action_insert_before"
				android:orderInCategory="11"
				android:title="@string/toolbar_insert_lyrics_before_selected_title"
				app:showAsAction="never" />

			<item
				android:id="@+id/action_insert_after"
				android:orderInCategory="12"
				android:title="@string/toolbar_insert_lyrics_after_selected_title"
				app:showAsAction="never" />

		</menu>

	</item>

</menu>