<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_rename_homepage"
		android:icon="@drawable/ic_edit_toolbar"
		android:orderInCategory="1"
		android:title="@string/toolbar_rename_lyric_file_title"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_select_all_homepage"
		android:icon="@drawable/ic_select_all_toolbar"
		android:orderInCategory="2"
		android:title="@string/toolbar_select_all_title"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_delete_homepage"
		android:icon="@drawable/ic_delete_toolbar"
		android:orderInCategory="3"
		android:title="@string/toolbar_delete_lyric_files_title"
		app:showAsAction="ifRoom" />

</menu>