<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:scrollbars="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/dp24"
			android:layout_marginTop="@dimen/dp14"
			android:layout_marginRight="@dimen/dp24"
			android:layout_marginBottom="@dimen/dp14"
			android:text="@string/batch_edit_prompt"
			android:textSize="@dimen/sp18" />

		<ImageButton
			android:id="@+id/batch_increase_time_button"
			android:layout_width="150dp"
			android:layout_height="50dp"
			android:contentDescription="@string/increase_timestamp_description"
			android:src="@drawable/ic_add" />

		<TextView
			android:id="@+id/batch_item_time"
			android:layout_width="wrap_content"
			android:layout_height="30dp"
			android:gravity="center"
			android:text="+00:00.00"
			android:textSize="@dimen/sp18" />

		<ImageButton
			android:id="@+id/batch_decrease_time_button"
			android:layout_width="150dp"
			android:layout_height="50dp"
			android:contentDescription="@string/decrease_timestamp_description"
			android:src="@drawable/ic_minus" />

	</LinearLayout>

</ScrollView>