<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/normal_padding"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_padding"
        android:text="@string/save_location_description"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/save_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_padding" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeSaveLocation"
        android:text="@string/save_location_button_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_marginBottom="@dimen/normal_padding"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/theme_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_padding"
        android:text="@string/select_a_theme_prompt"
        android:textStyle="bold"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/theme_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/radioButtonLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/radioButtonDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark" />
    </RadioGroup>

</LinearLayout>