<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyricfileParentLinearlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_row"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/dp10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fileNameTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp5"
            android:layout_weight="9"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:textSize="@dimen/sp18"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/expandableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp4"
            android:layout_marginEnd="@dimen/dp4"
            android:layout_weight=".01"
            android:contentDescription="@string/expandable_button_image"
            android:src="@drawable/ic_arrow_drop_down" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="@dimen/dp60"
            android:layout_height="wrap_content"
            android:layout_weight=".01"
            android:text="@string/edit" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lrcDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/dp5"
        android:visibility="gone">

        <TextView
            android:id="@+id/songNameTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:fadingEdgeLength="40dp"
            android:requiresFadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/song_name_prompt" />

        <TextView
            android:id="@+id/albumNameTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:fadingEdgeLength="40dp"
            android:requiresFadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/album_name_prompt" />

        <TextView
            android:id="@+id/artistNameTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:fadingEdgeLength="40dp"
            android:requiresFadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/artist_name_prompt" />

        <TextView
            android:id="@+id/composerNameTextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="none"
            android:fadingEdgeLength="40dp"
            android:requiresFadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/composer_prompt" />

        <TextView
            android:id="@+id/lyricsTextview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp8"
            android:text="@string/loading_lyrics" />

    </LinearLayout>

</LinearLayout>