<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:scrollbars="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/dialog_prompt"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/dp18"
			android:layout_marginTop="@dimen/dp18"
			android:layout_marginRight="@dimen/dp18"
			android:gravity="start"
			android:textSize="@dimen/sp18"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/dialog_edittext"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/dp18"
			android:layout_marginRight="@dimen/dp18"
			android:inputType="text"
			android:maxLines="1" />

		<LinearLayout
			style="?android:attr/buttonBarStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/dp18"
			android:gravity="center"
			android:orientation="horizontal">

			<Button
				android:id="@+id/same_name_as_song"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:onClick="setAsSongFileName"
				android:text="@string/set_as_song_file_name" />

			<Button
				android:id="@+id/same_name_as_lrc"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:onClick="setAsLRCFileName"
				android:text="@string/set_as_lrc_file_name" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="@dimen/dp18"
			android:layout_marginRight="@dimen/dp18"
			android:layout_marginBottom="@dimen/dp18"
			android:gravity="center_vertical"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/save_location_display"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight=".7" />

			<Button
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight=".3"
				android:onClick="editSaveLocation"
				android:text="@string/change" />

		</LinearLayout>

	</LinearLayout>

</ScrollView>
